raw/HANIF PRAMUDITA HANGGARA ERZA 6397 245150200111038/2024-11-14-07-29-25.ceg/compilation.txt
NT.java:27: error: not a statement
        double = sum - a[a];
        ^
NT.java:27: error: ';' expected
        double = sum - a[a];
              ^
NT.java:27: error: not a statement
        double = sum - a[a];
                     ^
3 errors
Not compiled
